export const snapshot = {};

snapshot[`/help 1`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==9=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"1/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==1=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"gacha=user_id"[39m,
            label: [32m"/gacha"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"now=user_id"[39m,
            label: [32m"/now"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"1."[39m,
        },
        description: [32m"Before anything: You will need characters.

__You get a free pull every 30 minutes (maxed at 5 pulls)__. Use \`/now\` to check how many pulls you have and how much time is left until your next free pull.

__Characters are exclusive__, once a player on this server finds a character, no one else can find that character in gacha again.

__Characters vary in ranks from 1<:smolstar:1107503653956374638>to 5<:smolstar:1107503653956374638>__ A character rating is based on their popularity (a character rating cannot be raised).

__Gacha rates depend on multiple variables__, but generally speaking the chances of a 5<:smolstar:1107503653956374638>appearing is equal or less than 1%.

> *\`/q\` allows you to do gacha pulls with no animations*
​"[39m,
        footer: {
          text: [32m"aliases: /w, /q"[39m,
        },
        title: [32m"\`/gacha\`"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 2`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==0=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"2/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==2=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"2."[39m,
        },
        description: [32m"Sacrifice characters to pull a new character with a higher rating.

__Your party members and likes will never be sacrificed.__ To protect characters from being merged, add them to your likeslist with \`/like\`

__It takes 5 characters with a lower rating__ to pull a new character

__Fable will always auto-merge your lowest-rated characters first.__

Example: \`/merge target: 3\` will sacrifice __25 of your 1<:smolstar:1107503653956374638>characters__
or __5 of your 2<:smolstar:1107503653956374638>characters.__

> *Sacrificed characters will return to being available in \`/gacha\`*
​"[39m,
        footer: {
          text: [32m"aliases: /synthesis"[39m,
        },
        title: [32m"\`/merge\`"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 3`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==1=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"3/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==3=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"cstars=5=user_id"[39m,
            label: [32m"/collection stars 5"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"cstars=4=user_id"[39m,
            label: [32m"/collection stars 4"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"3."[39m,
        },
        description: [32m"You will need a party to use combat features

__You can't have more than 1 party__ or save your current party to a preset and switch between presets.

\`/party view\` to see your current party.

\`/party assign name: spot:\` to assign a character you have to your party,
leaving the \`spot:\` empty will assign the character to the first empty spot or override the last spot.

> *\`/collection\` can be used to browse your characters and select your potential party members*
​"[39m,
        footer: {
          text: [32m"aliases: /team, /p"[39m,
        },
        title: [32m"\`/party\`"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 4`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==2=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"4/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==4=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Stealing"[39m,
        },
        description: [32m"When all negotiations fails, it's fine to take what you want by force, right?

__You can't steal characters assigned as party members__, meaning you can protect your most precious characters by adding them to your party.

__Inactive users are easier to steal from.__ Stay active by using \`/gacha\` or \`/q\` once a day.

__Inactive users lose their party protection__ after **4** days.

__The higher the character's rating the harder it is to steal.__ 5<:smolstar:1107503653956374638>characters have a base success rate of 1%.

__Steal has a cooldown of **3** days__ regardless of the outcome of the attempt.

> Staying active is the best defense against stealing.
​"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 5`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==3=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"5/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==5=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Combat"[39m,
        },
        description: [32m"Prepare your characters for combat using \`/stats\`

__Every character gets a starting amount of stat points__ based on their star rating.

__You can distribute those points in 3 different base stats:__ strength, stamina, and agility.

__Strength is damage__, the damage you can potentially do to your enemy.

__Agility is defense__, minimize the damage your enemy can do.

__Stamina is health points__, allows you to take more hits and survive longer in battle

Use \`/battle tower\` to climb the tower, each server has a unique tower and unique enemies and weakness.

> Level up your characters and gain extra stat points by \`/sweep\`ing the same floor a few times.
​"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 6`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==4=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"6/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==6=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"now=user_id"[39m,
            label: [32m"/vote"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"buy=bguaranteed=user_id=5"[39m,
            label: [32m"/buy guaranteed 5"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Shop"[39m,
        },
        description: [32m"The shop is a way to purchase extra pulls and guaranteed pulls.

__You get 1 daily token every day__, automatically added after your first \`/gacha\` of the day.

__Voting for Fable on Top.gg awards 1 token__, you can vote once every 12 hours.

__Voting on weekends awards 2 tokens__ (_Fridays, Saturdays and Sundays_).

\`/buy normal\` gets you extra pulls, they are the exact same as the ones you get every 30 minutes.

\`/buy guaranteed\` guarantees you get a character from one specific star rating.

Example: \`/buy guaranteed 5\` will guarantee you get one random 5<:smolstar:1107503653956374638>character.

3<:smolstar:1107503653956374638>cost **4** tokens
4<:smolstar:1107503653956374638>cost **12** tokens
5<:smolstar:1107503653956374638>cost **28** tokens

> Use the guaranteed pulls you bought by calling \`/pull stars:\`
​"[39m,
        footer: {
          text: [32m"aliases: /shop"[39m,
        },
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 7`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==5=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"7/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==7=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            label: [32m"GitHub"[39m,
            style: [33m5[39m,
            type: [33m2[39m,
            url: [32m"https://github.com/ker0olos/fable"[39m,
          },
          {
            label: [32m"Discord Support Server"[39m,
            style: [33m5[39m,
            type: [33m2[39m,
            url: [32m"https://discord.gg/H69RVBxeYY"[39m,
          },
        ],
        type: [33m1[39m,
      },
      {
        components: [
          {
            label: [32m"Donate"[39m,
            style: [33m5[39m,
            type: [33m2[39m,
            url: [32m"https://ko-fi.com/ker0olos"[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Roadmap"[39m,
        },
        description: [32m"__**Releasing in the near future (~3 months)**__

**[Classes And Skills](https://github.com/ker0olos/fable/issues/64)**

**[Server vs. Server](https://github.com/ker0olos/fable/issues/65)**
"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 8`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==6=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"8/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==8=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Essential Commands"[39m,
        },
        description: [32m"- \`/gacha\` \`/w\`: _start a new gacha pull_
- \`/q\`: _start a gacha pull but with no animations_
- \`/pull\` \`/guaranteed\`: _use a guaranteed pull you have_

- \`/now\` \`/vote\` \`/tu\`: _check what you can do right now_
- \`/search\` \`/anime\` \`/manga\` \`/series\`: _search for a specific series_
- \`/character\` \`/char\`: _search for a specific character_

- \`/merge\` \`/synthesize\`: _merge characters together to pull a new character_

- \`/party view\` \`/team view\` \`/p view\`: _view your current party_
- \`/party assign\` \`/team assign\` \`/p assign\`: _assign a character to your party_
- \`/party swap\` \`/team swap\` \`/p swap\`: _swap characters spots with each others_
- \`/party remove\` \`/team remove\` \`/p remove\`: _remove a character from your party_

- \`/collection stars\` \`/coll stars\` \`/mm stars\`: _view user stars_
- \`/collection media\` \`/coll media\` \`/mm media\`: _view user characters in a specific series_
- \`/collection sum\` \`/coll sum\` \`/mm sum\`: _view the sum numbers of a user collection_

- \`/steal\`: _steal a character from another user_
- \`/trade\` \`/offer\`: _trade characters with another user_
- \`/give\` \`/gift\`: _give characters to another user_

- \`/battle tower\`: _Climb the tower to glory and become a fable_
- \`/sweep\`: _Sweep your current battle tower floor for exp_"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 9`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==7=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"9/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==9=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Other Commands"[39m,
        },
        description: [32m"- \`/nick\`: _change the nickname of a character_
- \`/image\` \`/custom\`: _change the image of a character_

- \`/found\` \`/owned\`: _list all characters found from a specific series_

- \`/likeslist\`: _list all user likes_

- \`/like\` \`/protect\` \`/wish\`: _like a character to be notified if someone finds them_
- \`/unlike\`: _remove character from your likes_
- \`/likeall\`: _like a series to be notified if someone finds any character from it_
- \`/unlikeall\`: _remove a series from your likes_

- \`/buy normal\` \`/shop normal\`: _use tokens to buy normal pulls_
- \`/buy guaranteed\` \`/shop guaranteed\`: _use tokens to buy pulls with a specific guaranteed rating_

- \`/automerge min\`: _merge your characters together to pull the lowest rating possible_
- \`/automerge max\`: _merge your characters together to pull the highest rating possible_

- \`/installed packs\`: _list all the installed packs on a server_

- \`/logs\`: _list user last few found characters_"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;

snapshot[`/help 10`] = `
{
  data: {
    attachments: [],
    components: [
      {
        components: [
          {
            custom_id: [32m"help==8=prev"[39m,
            label: [32m"Prev"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"_"[39m,
            disabled: [33mtrue[39m,
            label: [32m"10/10"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
          {
            custom_id: [32m"help==0=next"[39m,
            label: [32m"Next"[39m,
            style: [33m2[39m,
            type: [33m2[39m,
          },
        ],
        type: [33m1[39m,
      },
    ],
    embeds: [
      {
        author: {
          name: [32m"Admin Commands"[39m,
        },
        description: [32m"_> \`/community\` requires \`Manage Server\` permission by default, but that can be changed in the \`Integrations\` section of your server settings, although we never recommend that._
- \`/packs install\`: _install a community pack_
- \`/packs uninstall\`: _uninstall a community pack_
- \`/packs disable builtins\`: _permanently disable the builtin packs_

> To create your own community pack visit <https://packs.deno.dev>"[39m,
        type: [32m"rich"[39m,
      },
    ],
  },
  type: [33m4[39m,
}
`;
